fix gap left and right of banner

--- a/stylesheets/landing_styles.css
+++ b/stylesheets/landing_styles.css
@@ -13,6 +13,7 @@ body {
     /* Sets the website to Flexbox */
     display: flex;
     flex-direction: column;
+    margin: 0;
 
     /* Sets the default font-size of the website */
     font-size: 20px;
